# system-arena

./: .gitignore  README.md  pyproject.toml
.claude/: settings.local.json
.github/ISSUE_TEMPLATE/: feedback.yml
lessons/: edge_cases.json
src/arena/: __init__.py
src/arena/cli/: main.py
src/arena/core/: __init__.py  event.py  snapshot.py  types.py
src/arena/datasets/: __init__.py  loader.py  manifest.py  validator.py
src/arena/decision/: __init__.py  action_space.py  extractor.py  labeler.py
src/arena/eval/: __init__.py  comparator.py  metrics.py  report.py
src/arena/feedback/: __init__.py  checker.py  parser.py  store.py  types.py
src/arena/integrations/: __init__.py  performance.py  pm4py_export.py  variants.py
src/arena/policy/: __init__.py  base.py  baselines.py  result.py
src/arena/replay/: __init__.py  runner.py  timeline.py  trace.py
tests/feedback/: __init__.py  test_feedback.py
